<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.melfouly.basicbanking.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_customersFragment"
            app:destination="@id/customersFragment"
            app:exitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_transactionsFragment"
            app:destination="@id/transactionsFragment"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/customersFragment"
        android:name="com.melfouly.basicbanking.ui.customers.feed.CustomersFragment"
        android:label="@string/customers"
        tools:layout="@layout/fragment_customers" >
        <action
            android:id="@+id/action_customersFragment_to_customerDetailsFragment"
            app:destination="@id/customerDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/customerDetailsFragment"
        android:name="com.melfouly.basicbanking.ui.customers.details.CustomerDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_customer_details" >
        <argument
            android:name="selectedCustomer"
            app:argType="com.melfouly.basicbanking.domain.Customer" />
        <action
            android:id="@+id/action_customerDetailsFragment_to_customersFragment"
            app:destination="@id/customersFragment"
            app:exitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/customersFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.melfouly.basicbanking.ui.transactions.TransactionsFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transactions" />
</navigation>