<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="selectedCustomer"
            type="com.melfouly.basicbanking.domain.Customer" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.customers.details.CustomerDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_label"
            style="@style/labels_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/customer_info_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{selectedCustomer.name}"
            app:layout_constraintBottom_toBottomOf="@id/name_label"
            app:layout_constraintStart_toEndOf="@id/name_label"
            app:layout_constraintTop_toTopOf="@id/name_label"
            tools:text="Mahmoud Reda" />

        <TextView
            android:id="@+id/email_label"
            style="@style/labels_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label" />

        <TextView
            android:id="@+id/email"
            style="@style/customer_info_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{selectedCustomer.email}"
            app:layout_constraintBottom_toBottomOf="@id/email_label"
            app:layout_constraintStart_toEndOf="@id/email_label"
            app:layout_constraintTop_toTopOf="@id/email_label"
            tools:text="abc@gmail.com" />

        <TextView
            android:id="@+id/phone_number_label"
            style="@style/labels_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_label" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/customer_info_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{selectedCustomer.phoneNumber}"
            app:layout_constraintBottom_toBottomOf="@id/phone_number_label"
            app:layout_constraintStart_toEndOf="@id/phone_number_label"
            app:layout_constraintTop_toTopOf="@id/phone_number_label"
            tools:text="01000000000" />

        <TextView
            android:id="@+id/balance_label"
            style="@style/labels_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/current_balance_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_label" />

        <TextView
            android:id="@+id/balance"
            style="@style/customer_info_style"
            loadBalance="@{selectedCustomer.currentBalance}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/balance_label"
            app:layout_constraintStart_toEndOf="@id/balance_label"
            app:layout_constraintTop_toTopOf="@id/balance_label"
            tools:text="2000EGP" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/send_to_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/send_to_hint"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/sent_to_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/amount_hint"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send_to_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/transfer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/transfer_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
